Fix phantom scrollbar

--- a/derpinewtab/style.css
+++ b/derpinewtab/style.css
@@ -53,6 +53,8 @@ a:hover {
 	width: var(--sidebar-size);
 	background: transparent;
 	overflow: auto;
+	padding: 10px;
+	box-sizing: border-box;
 }
 #viewport {
 	left: 0;
@@ -202,7 +204,6 @@ body:not(.loading) #metadata-list > a {
 }
 #settings {
 	font-size: 16px;
-	padding: 10px;
 	height: 100%;
 }
 #settings header {
